--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=LogServiceAPI
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/log_service_api_db # URL do banco de dados
-spring.datasource.username=postgres       # Usuário do banco de dados
-spring.datasource.password=sua_senha 
+spring.datasource.url=jdbc:postgresql://localhost:5432/log-service 
+spring.datasource.username=postgres       
+spring.datasource.password=admin 
 
-spring.jpa.hibernate.ddl-auto=update  # Pode ser update, create, validate, none
-spring.jpa.show-sql=true               # Exibe as queries no console (opcional)
+spring.jpa.hibernate.ddl-auto=update  
+spring.jpa.show-sql=true              
 
 logging.level.org.springframework=INFO      # Nível de log para Spring Framework
-logging.level.com.michael.logserviceapi=DEBUG # Nível de log para sua aplicação
+logging.level.com.logservice=DEBUG # Nível de log para sua aplicação
 logging.file.name=logs/application.log      # Arquivo onde os logs serão salvos
 logging.file.path=logs                      # Pasta para salvar os logs
 
