--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-spring.application.name=LogServiceAPI
+spring.application.name=log-service-API
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/log-service 
-spring.datasource.username=postgres       
-spring.datasource.password=admin 
+spring.datasource.url=jdbc:postgresql://localhost:5433/log-service
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
-spring.jpa.hibernate.ddl-auto=update  
-spring.jpa.show-sql=true              
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-logging.level.org.springframework=INFO      # Nível de log para Spring Framework
-logging.level.com.logservice=DEBUG # Nível de log para sua aplicação
-logging.file.name=logs/application.log      # Arquivo onde os logs serão salvos
-logging.file.path=logs                      # Pasta para salvar os logs
-
-server.port=8080  
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+             
+server.port=8080
