--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+logging.level.org.springframework.security=DEBUG
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
              
