--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+    
         <!-- Spring Boot dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -48,6 +49,11 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <!-- Bucket4j dependencies for rate limiting -->
