--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     </dependencies>
 
     <build>
+        <finalName>log-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
