--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=log-service-API
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/log-service
+spring.datasource.url=jdbc:postgresql://postgres-log-db:5432/log-service
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-logging.level.org.springframework.security=DEBUG
-
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-             
+
+logging.file.name=/logs/application.log
+logging.level.org.springframework=INFO
+
 server.port=8080
