--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=log-service-API
 
-spring.datasource.url=jdbc:postgresql://postgres-log-db:5432/log-service
+spring.datasource.url=jdbc:postgresql://postgres-logs:5432/log-service
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
