--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=log-service-API
 
-spring.datasource.url=jdbc:postgresql://postgres-logs:5432/log-service
+spring.datasource.url=jdbc:postgresql://postgres-logs:5433/log-service
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
@@ -9,6 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 logging.file.name=/logs/application.log
-logging.level.org.springframework=INFO
+logging.nivel.org.springframework=INFO
 
 server.port=8080
