--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.jpa.show-sql=true
 logging.file.name=/logs/application.log
 logging.nivel.org.springframework=INFO
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+spring.mvc.dispatch-options-request=true
+
 server.port=8080
