--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=log-service-API
 
-spring.datasource.url=jdbc:postgresql://postgres-logs:5433/log-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/log_service
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
@@ -8,8 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-logging.file.name=/logs/application.log
-logging.nivel.org.springframework=INFO
+logging.file.name=application.log
+logging.level.org.springframework=INFO
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
