--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-spring.application.name=log-service-API
+spring.application.name=${SPRING_APPLICATION_NAME}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/log_service
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-logging.file.name=application.log
+logging.file.name=${LOGGING_FILE_NAME}
 logging.level.org.springframework=INFO
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 spring.mvc.dispatch-options-request=true
 
-server.port=8080
+server.port=${SERVER_PORT}
